<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/confirm_button"
        android:title=""
        android:orderInCategory="1"
        app:showAsAction="always"
        android:icon="@drawable/ic_check_black_24dp"/>
</menu>